[tool.poetry]
name = "cipher_mc4938"
version = "0.1.0"
description = "This is a package with simple cipher functions for Maisie Chen's MDS 21 Fall class."
authors = ["Maisie Chen"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
